2011-04-18  John Bauman  <jbauman@chromium.org>

        Reviewed by Kenneth Russell.

        Don't cast BitmapImageSingleFrameSkia to BitmapImage
        https://bugs.webkit.org/show_bug.cgi?id=58821

        BitmapImageSingleFrameSkia has isBitmap return true, but
        can't be cast to a BitmapImage. Instead of using BitmapImage,
        use isOpaque from SkBitmap to determine if the image has alpha.

        No new tests.

        * platform/graphics/skia/GraphicsContext3DSkia.cpp:
        (WebCore::GraphicsContext3D::getImageData):

2011-04-18  Jessie Berlin  <jberlin@apple.com>

        Reviewed by Steve Falkenburg.

        If deleting the StorageTracker.db file fails, local storage is left in a strange state.
        https://bugs.webkit.org/show_bug.cgi?id=58805

        * storage/StorageTracker.cpp:
        (WebCore::StorageTracker::syncFileSystemAndTrackerDatabase):
        When cleaning up the StorageTracker.db file, is not enough to call syncDeleteOrigin.
        deleteOrigin itself must be called to update the data structures that syncDeleteOrigin
        depends on and to prevent clashes between a theoretical web page editing local storage
        at the same time this method is called.
        (WebCore::StorageTracker::syncDeleteAllOrigins):
        If it is not possible to delete the StorageTracker.db file, empty it.
        (WebCore::StorageTracker::deleteOriginOnMainThread):
        Wrapper for deleteOrigin.
        * storage/StorageTracker.h:

2011-04-18  Geoffrey Garen  <ggaren@apple.com>

        Build fix.

        Added back missing #include.

        * bindings/js/DOMWrapperWorld.cpp:

2011-04-18  Enrica Casucci  <enrica@apple.com>

        Reviewed by Maciej Stachowiak.

        Dropping a file in a WKView (WebKit2) doesn't load the file.
        https://bugs.webkit.org/show_bug.cgi?id=58842
        <rdar://problem/8514409>
        
        The URL string for the file contains an extra %00 at the end